--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
         })(window,document,'script','dataLayer','GTM-NRDZ99JB');</script>
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NRDZ99JB"
         height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-1F3J38WHYS"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-1F3J38WHYS');
+    </script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Inter:wght@300;400;600;700&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
