--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
         try {
             // Envoi du message
-            await emailjs.send('Developer_full_stack', 'template_lspwak2', {
+            await emailjs.send('Developer_full_stack', 'template_6mzqr7s', {
                 from_name: formData.from_name,
                 from_email: formData.from_email,
                 message: formData.message,
